tests/snapshots/generator__advanced_create_files@_bytes_1000_1_10_100.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 10 where each directory contains approximately 1 other directory. Each file will contain approximately 1,000 bytes of random data.
Created 2 files (2.1 kB) across 6 directories.

/0
/0.dir
/1
/0.dir/0.dir
/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/0.dir/0.dir
/0.dir/0.dir/0.dir/0.dir/0.dir/0.dir

0xb35f478c12b69a34
